feat: se agragan mas paginas y mas diseños del css. falta terminados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>WICREED</title>
 </head>
 <body>
     
@@ -17,13 +17,13 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Juegos</a></li>
-                    <li><a href="#">Personajes</a></li>
-                    <li><a href="#">Historia</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/juegos.html">Juegos</a></li>
+                    <li><a href="/personajes.html">Personajes</a></li>
+                    <li><a href="/historia.html">Historia</a></li>
                     <li><a href="#">Multimedia</a></li>
                     <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Ingresar</a></li>
+                    <li><a href="#" id="login">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,13 +44,19 @@
     
     <main class="about">
         <section class="about-content">
-            <h2>BIENVENIDO AL CREDO</h2>
+            <div class="rotating-text-wrapper">
+                <h2>BIENVENIDO AL CREDO</h2>
+                <h2>SIRVE A LA LUZ</h2>
+                <h2>ENTRE LAS SOMBRAS</h2>
+            </div>
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Suscipit repellat atque cum sunt cumque, eius, eveniet vitae
                 nisi corrupti esse ipsum voluptatibus odio magni. Numquam 
                 neque exercitationem quia ut quae.
             </p>
         </section>
+        <video src="videos/videoplayback.mp4" autoplay muted loop controls poster="/images/poster-videoplayback.jpeg" class="video-about"></video>
         <article>
             <div class="titulo">
                 <h1>ASSASSIN'S CREED</h1>
