feat: se agrega pagina de multimedia y se completa la de historia

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="/juegos.html">Juegos</a></li>
                     <li><a href="/personajes.html">Personajes</a></li>
                     <li><a href="/historia.html">Historia</a></li>
-                    <li><a href="#">Multimedia</a></li>
+                    <li><a href="/multimendia.html">Multimedia</a></li>
                     <li><a href="#">Tienda</a></li>
                     <li><a href="#" id="login">Ingresar</a></li>
                 </ul>
