feat: creacion de mas paginas para complementar la informacion y el login de inicio. Falta completar el footer, colocar informacion del juego en el index, etc.

--- a/personajes.html
+++ b/personajes.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="menu container">    
-            <a href="#" class="logo">ac</a>
+            <a href="index.html" class="logo">ac</a>
             <input type="checkbox" id="menu">
             <label for="menu">
                 <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
@@ -21,8 +21,8 @@
                     <li><a href="/personajes.html">Personajes</a></li>
                     <li><a href="/historia.html">Historia</a></li>
                     <li><a href="/multimendia.html">Multimedia</a></li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#" id="login">Ingresar</a></li>
+                    <li><a href="/tienda.html">Tienda</a></li>
+                    <li><a href="/login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,7 +86,9 @@
     
     <footer>
         <hr>
-        <p>&copy; 2024 Assassin's Creed</p>
+        <p>This page is for all the people who like this game.</p>  
+        <p>Assassin's forever®  </p>
+
     </footer>
 
 </body>
