--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header class="header">
         <div class="menu container">    
-            <a href="#" class="logo">ac</a>
+            <a href="/index.html" class="logo">ac</a>
             <input type="checkbox" id="menu">
             <label for="menu">
                 <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
@@ -22,8 +22,8 @@
                     <li><a href="/personajes.html">Personajes</a></li>
                     <li><a href="/historia.html">Historia</a></li>
                     <li><a href="/multimendia.html">Multimedia</a></li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#" id="login">Ingresar</a></li>
+                    <li><a href="/tienda.html">Tienda</a></li>
+                    <li><a href="/login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
