--- a/multimendia.html
+++ b/multimendia.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="menu container">    
-            <a href="#" class="logo">ac</a>
+            <a href="index.html" class="logo">ac</a>
             <input type="checkbox" id="menu">
             <label for="menu">
                 <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
@@ -21,14 +21,14 @@
                     <li><a href="/personajes.html">Personajes</a></li>
                     <li><a href="/historia.html">Historia</a></li>
                     <li><a href="/multimendia.html">Multimedia</a></li>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#" id="login">Ingresar</a></li>
+                    <li><a href="/tienda.html">Tienda</a></li>
+                    <li><a href="/login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main class="multimedia">
-        <h2 id="title">adelantos de Assassin's Creed Shadows</h2>
+        <h2 id="title">Assassin's Creed Shadows</h2>
 
         <article class="gallery">
             <div class="image-container">
@@ -90,6 +90,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Assassin's Creed. Todos los derechos reservados.</p>
+        <hr>
+        <p>This page is for all the people who like this game.</p>  
+        <p>Assassin's forever®  </p>
+
     </footer>
 </body>
