feat: fixed: se termina la pagina y se reparan errores. Queda faltante la parte de registro.

--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
             <div class="header-text">
                 <h1>ASSASSIN'S CREED</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Nihil commodi nostrum asperiores voluptatum tempora quaerat. 
-                    Vero dignissimos sequi veniam excepturi cum porro beatae quas earum,
-                    accusamus consequuntur rem aut possimus?
+                    ¡Descubre Assassin's Creed Shadows, el capítulo más oscuro y emocionante de la saga! Sumérgete en una épica aventura de sigilo y acción en un mundo abierto, y desvela los secretos que redefinirán la historia de los Asesinos. No te pierdas esta oportunidad de experimentar la serie como nunca antes. ¡Compra ahora y sé el primero en desvelar las sombras del pasado!
                 </p>
-                <a href="#" class="btn-1">COMPRAR AHORA</a>
+                <a href="/login.html" class="btn-1">COMPRAR AHORA</a>
             </div>
         </div>
     </header>
@@ -50,10 +47,8 @@
                 <h2>ENTRE LAS SOMBRAS</h2>
             </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Suscipit repellat atque cum sunt cumque, eius, eveniet vitae
-                nisi corrupti esse ipsum voluptatibus odio magni. Numquam 
-                neque exercitationem quia ut quae.
+            <p>
+                Ser un Assassin en el universo de Assassin's Creed es más que ser un guerrero hábil y sigiloso; es pertenecer a una hermandad con un propósito noble y un código de honor. Los Assassins luchan por la libertad y la justicia, protegiendo el libre albedrío de la humanidad contra la opresión y el control de los Templarios. El credo de los Assassins, "Nada es verdad, todo está permitido", nos recuerda que debemos cuestionar el mundo que nos rodea y forjar nuestro propio camino. En esta página, exploraremos las vidas de estos héroes y sus epopeyas a lo largo de la historia, descubriendo cómo sus acciones han dado forma al destino de la humanidad.
             </p>
         </section>
         <video src="videos/videoplayback.mp4" autoplay muted loop controls poster="/images/poster-videoplayback.jpeg" class="video-about"></video>
@@ -62,21 +57,13 @@
                 <h1>ASSASSIN'S CREED</h1>
             </div>
         
-            <p>Assassin's Creed es una saga de videojuegos de aventura, acción y sigilo con elementos 
-            de rol y mundo abierto cuyo propietario actual es Ubisoft y que actualmente cuenta con
-            un total de 42 juegos para PS5, Xbox Series X/S, Switch, PS4, Xbox One, Wii U, PSVITA,
-            Android, iPhone, PSP, PC, NDS, PS3 y Xbox 360.</p>
-            <p>juegos de Asassin's Creed llevan a los jugadores a distintos periodos de la Historia
-            decisivos para la humanidad, como el Renacimiento Europeo, la Antigua Grecia o las cruzadas,
-            entre otros. Todos ellos tienen en común un conflicto a lo largo de los siglos entre los Asesinos 
-            y los Templarios, y en la mayoría de ellos hay partes que transcurren en el presente. </p>
-            <p>La mayoría de estos títulos son aventuras de sigilo o los RPG de acción en mundo abierto, aunque los hay de otros géneros.
-            En esta página encontrarás el listado completo con todos los juegos de Assassin's Creed
-            que existen, ordenados según su fecha de lanzamiento para que puedas saber cuál es el 
-            último juego de Assassin's Creed que se ha anunciado o que ya ha salido a la venta, 
-            y cuál fue el primer juego de todos con el que se inició la saga.<br></p>
-            <p>Además, te mostramos la nota que le han dado nuestros analistas a cada una de las entregas, 
-            para que sepas cuáles son los mejores juegos de Assassin's Creed de la historia y los que más merecen la pena actualmente.</p>
+            <p>
+                Assassin's Creed es una serie de videojuegos de aventura, acción y sigilo, con elementos de rol y mundo abierto. Propiedad de Ubisoft, esta saga cuenta actualmente con 42 juegos disponibles en plataformas como PS5, Xbox Series X/S, Switch, PS4, Xbox One, Wii U, PSVITA, Android, iPhone, PSP, PC, NDS, PS3 y Xbox 360.</p>
+            <p>
+                Estos juegos transportan a los jugadores a periodos históricos cruciales para la humanidad, como el Renacimiento Europeo, la Antigua Grecia y las cruzadas. Todos ellos comparten la lucha centenaria entre los Asesinos y los Templarios, y la mayoría incluye secciones que transcurren en el presente. Aunque la mayoría son aventuras de sigilo o RPGs de acción en mundo abierto, también existen títulos de otros géneros.
+            </p>
+            <p>En esta página, encontrarás un listado completo de todos los juegos de Assassin's Creed, ordenados por su fecha de lanzamiento. Así podrás saber cuál es el juego más reciente de la saga y cuál fue el primero en salir. También te mostramos las calificaciones de nuestros analistas para cada título, para que conozcas cuáles son los mejores juegos de Assassin's Creed y los más recomendados actualmente.
+            </p>
         </article>
     </main>
     <footer>
