--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h1>Ingreso</h1>
-        <form action="/dashboard.html" method="post">
+        <form action="/account.html" method="post">
             <div class="input-group">
                 <label for="username">Usuario:</label>
                 <input type="text" id="username" name="username" required>
