--- a/tienda.html
+++ b/tienda.html
@@ -21,7 +21,7 @@
                     <li><a href="/personajes.html">Personajes</a></li>
                     <li><a href="historia.html">Historia</a></li>
                     <li><a href="/multimendia.html">Multimedia</a></li>
-                    <li><a href="#">Tienda</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
                     <li><a href="/login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
@@ -37,28 +37,28 @@
                 <h2>Assassin's Creed</h2>
                 <p>Lanzamiento: 2007</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac2.jpeg" alt="Assassin's Creed II">
                 <h2>Assassin's Creed II</h2>
                 <p>Lanzamiento: 2009</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_brotherhood.webp" alt="Assassin's Creed Brotherhood">
                 <h2>Assassin's Creed Brotherhood</h2>
                 <p>Lanzamiento: 2010</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_revelations.jpeg" alt="Assassin's Creed Revelations">
                 <h2>Assassin's Creed Revelations</h2>
                 <p>Lanzamiento: 2011</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_3.jpeg" alt="Assassin's Creed III">
@@ -72,49 +72,49 @@
                 <h2>Assassin's Creed IV: Black Flag</h2>
                 <p>Lanzamiento: 2013</p>
                 <p>Plataformas: PS3, PS4, Xbox 360, Xbox One, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_rogue.jpeg" alt="Assassin's Creed Rogue">
                 <h2>Assassin's Creed Rogue</h2>
                 <p>Lanzamiento: 2014</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_unity.webp" alt="Assassin's Creed Unity">
                 <h2>Assassin's Creed Unity</h2>
                 <p>Lanzamiento: 2014</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_syndicate.jpeg" alt="Assassin's Creed Syndicate">
                 <h2>Assassin's Creed Syndicate</h2>
                 <p>Lanzamiento: 2015</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_origins.webp" alt="Assassin's Creed Origins">
                 <h2>Assassin's Creed Origins</h2>
                 <p>Lanzamiento: 2017</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_odyssey.jpeg" alt="Assassin's Creed Odyssey">
                 <h2>Assassin's Creed Odyssey</h2>
                 <p>Lanzamiento: 2018</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
                 <img src="images/ac_valhalla.jpeg" alt="Assassin's Creed Valhalla">
                 <h2>Assassin's Creed Valhalla</h2>
                 <p>Lanzamiento: 2020</p>
                 <p>Plataformas: PS4, PS5, Xbox One, Xbox Series X/S, PC</p>
-                <a href="#" class="buy-button">Comprar</a>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             
         </div>
@@ -128,7 +128,7 @@
             <h2>Assassin's Creed Shadows</h2>
             <p>Lanzamiento: 12 de noviembre de 2024</p>
             <p>Plataformas: PS4, PS5, Xbox One, Xbox Series X/S, PC</p>
-            <a href="#" class="buy-button">Reservar Ahora</a>
+            <a href="/login.html" class="buy-button">Reservar Ahora</a>
         </div>
     </section>
     <footer>
