--- a/registro.html
+++ b/registro.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style-registro.css">
+    <title>Registro</title>
 </head>
 <body>
-    <p>Intenta otro dia, el programador esta cansado.<br></p>
-    <p>Dijo: "Ya no aguanto masssss..."</p>
+    <div class="registro-container">
+        <h1>Registro</h1>
+        <form id="registro-form">
+            <label for="username">Nombre de Usuario</label>
+            <input type="text" id="username" name="username" required>
+            
+            <label for="email">Correo Electrónico</label>
+            <input type="email" id="email" name="email" required>
 
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password" required>
+
+            <label for="confirm-password">Confirmar Contraseña</label>
+            <input type="password" id="confirm-password" name="confirm-password" required>
+
+            <button type="submit">Registrarse</button>
+        </form>
+        <p>¿Ya tienes una cuenta? <a href="login.html">Iniciar Sesión</a></p>
+    </div>
+
+    <script src="js/data.js"></script>
 </body>
 </html>
