feat: :art: se agragan funciones para que muestre informacion del usuario
se agragan funciones para que muestre informacion del usuario en el codigo html, registro y login funciona correctamente

by @ErikSneyPlata

--- a/html/tienda.html
+++ b/html/tienda.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style-juegos.css">
-    <title>Games</title>
+    <link rel="stylesheet" href="/css/style-tienda.css">
+    <title>Tienda de Juegos</title>
 </head>
 <body>
     <header class="header">
@@ -12,17 +12,17 @@
             <a href="index.html" class="logo">ac</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
+                <img src="/images/barra-menu.png" alt="menu" class="menu-icon" width="">
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/juegos.html">Juegos</a></li>
-                    <li><a href="/personajes.html">Personajes</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="juegos.html">Juegos</a></li>
+                    <li><a href="personajes.html">Personajes</a></li>
                     <li><a href="historia.html">Historia</a></li>
-                    <li><a href="/multimendia.html">Multimedia</a></li>
-                    <li><a href="/tienda.html">Tienda</a></li>
-                    <li><a href="/login.html" id="login">Ingresar</a></li>
+                    <li><a href="multimendia.html">Multimedia</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
+                    <li><a href="login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,97 +30,112 @@
 
     <main class="games">
         <h1><Strong>Assassin's</Strong> Creed</h1>
-        <h2>VIDEOJUEGOS</h2>
+        <h2>TIENDA DE JUEGOS</h2>
         <div class="game-grid">
             <div class="game-card">
-                <img src="images/ac1.jpg" alt="Assassin's Creed">
+                <img src="../images/ac1.jpg" alt="Assassin's Creed">
                 <h2>Assassin's Creed</h2>
                 <p>Lanzamiento: 2007</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac2.jpeg" alt="Assassin's Creed II">
+                <img src="../images/ac2.jpeg" alt="Assassin's Creed II">
                 <h2>Assassin's Creed II</h2>
                 <p>Lanzamiento: 2009</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_brotherhood.webp" alt="Assassin's Creed Brotherhood">
+                <img src="../images/ac_brotherhood.webp" alt="Assassin's Creed Brotherhood">
                 <h2>Assassin's Creed Brotherhood</h2>
                 <p>Lanzamiento: 2010</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_revelations.jpeg" alt="Assassin's Creed Revelations">
+                <img src="../images/ac_revelations.jpeg" alt="Assassin's Creed Revelations">
                 <h2>Assassin's Creed Revelations</h2>
                 <p>Lanzamiento: 2011</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_3.jpeg" alt="Assassin's Creed III">
+                <img src="../images/ac_3.jpeg" alt="Assassin's Creed III">
                 <h2>Assassin's Creed III</h2>
                 <p>Lanzamiento: 2012</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
+                <a href="#" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_black_flag.jpeg" alt="Assassin's Creed IV: Black Flag">
+                <img src="../images/ac_black_flag.jpeg" alt="Assassin's Creed IV: Black Flag">
                 <h2>Assassin's Creed IV: Black Flag</h2>
                 <p>Lanzamiento: 2013</p>
                 <p>Plataformas: PS3, PS4, Xbox 360, Xbox One, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_rogue.jpeg" alt="Assassin's Creed Rogue">
+                <img src="../images/ac_rogue.jpeg" alt="Assassin's Creed Rogue">
                 <h2>Assassin's Creed Rogue</h2>
                 <p>Lanzamiento: 2014</p>
                 <p>Plataformas: PS3, Xbox 360, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_unity.webp" alt="Assassin's Creed Unity">
+                <img src="../images/ac_unity.webp" alt="Assassin's Creed Unity">
                 <h2>Assassin's Creed Unity</h2>
                 <p>Lanzamiento: 2014</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_syndicate.jpeg" alt="Assassin's Creed Syndicate">
+                <img src="../images/ac_syndicate.jpeg" alt="Assassin's Creed Syndicate">
                 <h2>Assassin's Creed Syndicate</h2>
                 <p>Lanzamiento: 2015</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_origins.webp" alt="Assassin's Creed Origins">
+                <img src="../images/ac_origins.webp" alt="Assassin's Creed Origins">
                 <h2>Assassin's Creed Origins</h2>
                 <p>Lanzamiento: 2017</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_odyssey.jpeg" alt="Assassin's Creed Odyssey">
+                <img src="../images/ac_odyssey.jpeg" alt="Assassin's Creed Odyssey">
                 <h2>Assassin's Creed Odyssey</h2>
                 <p>Lanzamiento: 2018</p>
                 <p>Plataformas: PS4, Xbox One, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
             <div class="game-card">
-                <img src="images/ac_valhalla.jpeg" alt="Assassin's Creed Valhalla">
+                <img src="../images/ac_valhalla.jpeg" alt="Assassin's Creed Valhalla">
                 <h2>Assassin's Creed Valhalla</h2>
                 <p>Lanzamiento: 2020</p>
                 <p>Plataformas: PS4, PS5, Xbox One, Xbox Series X/S, PC</p>
+                <a href="/login.html" class="buy-button">Comprar</a>
             </div>
+            
         </div>
+        
     </main>
     <hr>
     <section class="shadows">
         <div class="game-new">
             <h1>PROXIMAMENTE</h1>
-            <img src="images/ac_shadows.webp" alt="Assassin's Creed Valhalla">
+            <img src="../images/ac_shadows.webp" alt="Assassin's Creed Valhalla">
             <h2>Assassin's Creed Shadows</h2>
             <p>Lanzamiento: 12 de noviembre de 2024</p>
             <p>Plataformas: PS4, PS5, Xbox One, Xbox Series X/S, PC</p>
+            <a href="/login.html" class="buy-button">Reservar Ahora</a>
         </div>
     </section>
-
     <footer>
         <hr>
         <p>This page is for all the people who like this game.</p>  
         <p>Assassin's forever®  </p>
 
     </footer>
+</body>
 </html>
