--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
                 <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
             </label>
             <nav class="navbar">
-                <ul>
-                    <li id="user-info"></li>
+                <ul id="navbar-a">
                     <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/juegos.html">Juegos</a></li>
-                    <li><a href="/personajes.html">Personajes</a></li>
-                    <li><a href="/historia.html">Historia</a></li>
-                    <li><a href="/multimedia.html">Multimedia</a></li>
-                    <li><a href="/tienda.html">Tienda</a></li>
+                    <li><a href="html/juegos.html">Juegos</a></li>
+                    <li><a href="html/personajes.html">Personajes</a></li>
+                    <li><a href="html/historia.html">Historia</a></li>
+                    <li><a href="html/multimedia.html">Multimedia</a></li>
+                    <li><a href="html/tienda.html">Tienda</a></li>
                     <li id="auth-links">
-                        <a href="login.html" id="login-link">Login</a>
+                        <a href="/html/login.html" id="login-link">ingresar</a>
                         <a href="#" id="logout-button" style="display: none;">Cerrar Sesión</a>
                     </li>
                 </ul>
