--- a/html/historia.html
+++ b/html/historia.html
@@ -16,13 +16,13 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/juegos.html">Juegos</a></li>
-                    <li><a href="/personajes.html">Personajes</a></li>
-                    <li><a href="/historia.html">Historia</a></li>
-                    <li><a href="/multimendia.html">Multimedia</a></li>
-                    <li><a href="/tienda.html">Tienda</a></li>
-                    <li><a href="/login.html" id="login">Ingresar</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="juegos.html">Juegos</a></li>
+                    <li><a href="personajes.html">Personajes</a></li>
+                    <li><a href="historia.html">Historia</a></li>
+                    <li><a href="multimendia.html">Multimedia</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
+                    <li><a href="login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
