--- a/html/login.html
+++ b/html/login.html
@@ -15,11 +15,11 @@
         <h3>Ingresa tus credenciales</h3>
         <form id="login-form">
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
                 <label for="email">Correo Electrónico</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                 <label for="password">Contraseña</label>
             </div>
             <button type="submit" class="btn btn-primary w-100 login-button mt-3">Ingresar</button>
