--- a/html/registro.html
+++ b/html/registro.html
@@ -26,7 +26,7 @@
         </form>
         <p>¿Ya tienes una cuenta? <a href="login.html">Iniciar Sesión</a></p>
     </div>
+    <script src="javascript/data.js"></script>
 
-    <script src="js/data.js"></script>
 </body>
 </html>
