build: :construction: se hace el apartado de la tienda
se refactoriza codigo, se trabaja en desarrolo de compras para que aparezca en todas las paginas, y se pueda enlazar con la cuenta del cliente. Se generan estilos para el carrito de compras,  se genera una base de datos.

by @ErikSneyPlata

--- a/html/registro.html
+++ b/html/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-registro.css">
+    <link rel="stylesheet" href="../css/style-registro.css">
     <title>Registro</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
         </form>
         <p>¿Ya tienes una cuenta? <a href="login.html">Iniciar Sesión</a></p>
     </div>
-    <script src="javascript/data.js"></script>
+    <script src="../javascript/data.js"></script>
 
 </body>
 </html>
