--- a/html/historia.html
+++ b/html/historia.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style-historia.css">
+    <link rel="stylesheet" href="../css/style-carrito-compras.css">
     <title>Historia</title>
 </head>
 <body>
     <header class="header">
         <div class="menu container">    
-            <a href="index.html" class="logo">ac</a>
+            <a href="../index.html" class="logo">ac</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
+                <img src="/images/barra-menu.png" alt="menu" class="menu-icon">
             </label>
             <nav class="navbar">
                 <ul>
@@ -25,6 +26,10 @@
                     <li><a href="login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
+            <div class="cart-container">
+                <img src="/images/cart-icon.png" alt="Carrito" class="cart-icon">
+                <span class="cart-count">0</span>
+            </div>
         </div>
     </header>
 
@@ -83,7 +88,14 @@
             </div>
         </section>
     </main>
-
+    <div class="cart">
+        <h2>Tu Carrito</h2>
+        <div class="cart-items"></div>
+        <div class="cart-total">
+            <strong>Total:</strong> $<span id="cart-total-price">0</span>
+        </div>
+        <button id="checkout-button" class="checkout-button">Proceder al Pago</button>
+    </div>
     <footer>
         <hr>
         <p>This page is for all the people who like this game.</p>  
@@ -91,3 +103,5 @@
 
     </footer>
 </body>
+<script src="../javascript/carrito-compras.js"></script>
+</html>
