--- a/html/login.html
+++ b/html/login.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit" class="btn btn-primary w-100 login-button mt-3">Ingresar</button>
         </form>
-        <p class="text-center mt-3">¿No tienes una cuenta? <a href="/registro.html">Regístrate</a></p>
+        <p class="text-center mt-3">¿No tienes una cuenta? <a href="../html/registro.html">Regístrate</a></p>
     </div>
     <script src="/javascript/login.js"></script>
 </body>
