--- a/html/multimendia.html
+++ b/html/multimendia.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style-multimedia.css">
+    <link rel="stylesheet" href="../css/style-carrito-compras.css">
+
     <title>Galería</title>
 </head>
 <body>
     <header class="header">
         <div class="menu container">    
-            <a href="index.html" class="logo">ac</a>
+            <a href="../index.html" class="logo">ac</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="/images/barra-menu.png" alt="menu" class="menu-icono" width="">
+                <img src="/images/barra-menu.png" alt="menu" class="menu-icon">
             </label>
             <nav class="navbar">
                 <ul>
@@ -25,10 +27,14 @@
                     <li><a href="login.html" id="login">Ingresar</a></li>
                 </ul>
             </nav>
+            <div class="cart-container">
+                <img src="/images/cart-icon.png" alt="Carrito" class="cart-icon">
+                <span class="cart-count">0</span>
+            </div>
         </div>
     </header>
     <main class="multimedia">
-        <h2 id="title">Assassin's Creed Shadows</h2>
+        <h2 class="video">Assassin's Creed Shadows</h2>
 
         <article class="gallery">
             <div class="image-container">
@@ -42,7 +48,7 @@
         </article>
         
         <section class="gallery">
-            <h2>Galería de Imágenes</h2>
+            <h2 class="video">Galería de Imágenes</h2>
             <div class="image-container">
 
                 <div class="image-item">
@@ -77,7 +83,7 @@
         </section>
 
         <section class="videos">
-            <h2>Videos</h2>
+            <h2 class="video">Videos</h2>
             <div class="video-container">
                 <div class="video-item">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allowfullscreen></iframe>
@@ -88,7 +94,14 @@
             </div>
         </section>
     </main>
-
+    <div class="cart">
+        <h2>Tu Carrito</h2>
+        <div class="cart-items"></div>
+        <div class="cart-total">
+            <strong>Total:</strong> $<span id="cart-total-price">0</span>
+        </div>
+        <button id="checkout-button" class="checkout-button">Proceder al Pago</button>
+    </div>
     <footer>
         <hr>
         <p>This page is for all the people who like this game.</p>  
@@ -96,3 +109,5 @@
 
     </footer>
 </body>
+<script src="../javascript/carrito-compras.js"></script>
+</html>
