--- a/html/multimendia.html
+++ b/html/multimendia.html
@@ -17,14 +17,17 @@
                 <img src="/images/barra-menu.png" alt="menu" class="menu-icon">
             </label>
             <nav class="navbar">
-                <ul>
+                <ul id="navbar-a">
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="juegos.html">Juegos</a></li>
                     <li><a href="personajes.html">Personajes</a></li>
                     <li><a href="historia.html">Historia</a></li>
                     <li><a href="multimendia.html">Multimedia</a></li>
                     <li><a href="tienda.html">Tienda</a></li>
-                    <li><a href="login.html" id="login">Ingresar</a></li>
+                    <li id="auth-links">
+                        <a href="login.html" id="login-link">Ingresar</a>
+                        <a href="#" id="logout-button" style="display: none;">Cerrar Sesión</a>
+                    </li>
                 </ul>
             </nav>
             <div class="cart-container">
@@ -110,4 +113,5 @@
     </footer>
 </body>
 <script src="../javascript/carrito-compras.js"></script>
+<script src="../javascript/multimedia.js"></script>
 </html>
